--- a/web/index.html
+++ b/web/index.html
@@ -5,34 +5,7 @@
     <title>wgpu hecs Renderer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        background-color: #1a1a1a;
-        overflow: hidden;
-        font-family: system-ui, sans-serif;
-        color: #f5f5f5;
-      }
-
-      #loading {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
-        opacity: 0.8;
-      }
-
-      #loading span {
-        display: inline-block;
-        margin-top: 0.5rem;
-        font-size: 0.9rem;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-      }
+      /* ... your existing styles ... */
     </style>
   </head>
   <body>
@@ -45,6 +18,33 @@
       </svg>
       <span>Loading WebGPU demo…</span>
     </div>
+
+    <!-- CHECK WEBGPU AVAILABILITY FIRST -->
+    <script>
+      if (!navigator.gpu) {
+        document.getElementById("loading").innerHTML = 
+          "<strong style='color: #ff6b6b;'>WebGPU Not Available</strong><br/><br/>" +
+          "<span style='font-size: 0.85rem;'>Your browser doesn't support WebGPU.</span><br/>" +
+          "<span style='font-size: 0.75rem; opacity: 0.8;'>Please use:</span><br/>" +
+          "<span style='font-size: 0.75rem;'>• Chrome/Edge 113+ (Windows/Mac/Linux)<br/>" +
+          "• Chrome Canary with WebGPU enabled<br/>" +
+          "• Or enable WebGPU at <code>chrome://flags</code></span>";
+        throw new Error("WebGPU not supported");
+      } else {
+        console.log("✓ WebGPU is available");
+        navigator.gpu.requestAdapter().then(adapter => {
+          if (adapter) {
+            console.log("✓ WebGPU adapter found:", adapter);
+          } else {
+            console.error("✗ No WebGPU adapter available");
+            document.getElementById("loading").innerHTML = 
+              "<strong style='color: #ff6b6b;'>No WebGPU Adapter</strong><br/><br/>" +
+              "<span style='font-size: 0.85rem;'>WebGPU is available but no adapter found.</span><br/>" +
+              "<span style='font-size: 0.75rem;'>Try enabling WebGPU in browser flags.</span>";
+          }
+        });
+      }
+    </script>
 
     <script type="module">
       async function init() {
